Removal of remaining SecurityManager references
- Note that there is our own class of the same name

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>